chore: pass tracer options to ContractCallService
Signed-off-by: Victor Yanev <victor.yanev@limechain.tech>