@@ -24,6 +24,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.options;
@@ -41,6 +42,7 @@ import com.hedera.mirror.common.domain.transaction.Transaction;
 import com.hedera.mirror.rest.model.OpcodesResponse;
 import com.hedera.mirror.web3.common.TransactionIdOrHashParameter;
 import com.hedera.mirror.web3.evm.contracts.execution.OpcodesProcessingResult;
+import com.hedera.mirror.web3.evm.contracts.execution.traceability.OpcodeTracerOptions;
 import com.hedera.mirror.web3.evm.properties.MirrorNodeEvmProperties;
 import com.hedera.mirror.web3.exception.MirrorEvmTransactionException;
 import com.hedera.mirror.web3.repository.EthereumTransactionRepository;
@@ -133,16 +135,17 @@ class OpcodesControllerTest {
     @Captor
     private ArgumentCaptor<CallServiceParameters> callServiceParametersCaptor;
 
+    @Captor
+    private ArgumentCaptor<OpcodeTracerOptions> tracerOptionsCaptor;
+
     private final AtomicReference<OpcodesProcessingResult> opcodesResultCaptor = new AtomicReference<>();
 
     private MockHttpServletRequestBuilder opcodesRequest(TransactionIdOrHashParameter parameter) {
-        return opcodesRequest(parameter, true, false, false);
+        return opcodesRequest(parameter, new OpcodeTracerOptions());
     }
 
     private MockHttpServletRequestBuilder opcodesRequest(TransactionIdOrHashParameter parameter,
-                                                         boolean stack,
-                                                         boolean memory,
-                                                         boolean storage) {
+                                                         OpcodeTracerOptions options) {
         final String transactionIdOrHash = parameter.isHash() ?
                 Bytes.of(parameter.hash().toByteArray()).toHexString() :
                 transactionIdString(
@@ -151,9 +154,9 @@ class OpcodesControllerTest {
                 );
 
         return opcodesRequest(transactionIdOrHash)
-                .queryParam("stack", String.valueOf(stack))
-                .queryParam("memory", String.valueOf(memory))
-                .queryParam("storage", String.valueOf(storage));
+                .queryParam("stack", String.valueOf(options.isStack()))
+                .queryParam("memory", String.valueOf(options.isMemory()))
+                .queryParam("storage", String.valueOf(options.isStorage()));
     }
 
     private MockHttpServletRequestBuilder opcodesRequest(String transactionIdOrHash) {
@@ -190,13 +193,14 @@ class OpcodesControllerTest {
 
     void setUp(Transaction transaction, EthereumTransaction ethTransaction, RecordFile recordFile) {
         when(bucket.tryConsume(1)).thenReturn(true);
-        when(contractCallService.processOpcodeCall(callServiceParametersCaptor.capture())).thenAnswer(context -> {
+        when(contractCallService.processOpcodeCall(
+                callServiceParametersCaptor.capture(),
+                tracerOptionsCaptor.capture()
+        )).thenAnswer(context -> {
             final CallServiceParameters params = context.getArgument(0);
-            final var recipient = params != null ? params.getReceiver() : Address.ZERO;
-            final var output = Bytes.EMPTY;
-            final var result = Builder.opcodesProcessingResult(recipient, output);
-            opcodesResultCaptor.set(result);
-            return result;
+            final OpcodeTracerOptions options = context.getArgument(1);
+            opcodesResultCaptor.set(Builder.opcodesProcessingResult(params, options));
+            return opcodesResultCaptor.get();
         });
         when(ethereumTransactionRepository.findByHash(any(byte[].class))).thenReturn(Optional.ofNullable(ethTransaction));
         when(ethereumTransactionRepository.findById(transaction.getConsensusTimestamp())).thenReturn(Optional.ofNullable(ethTransaction));
@@ -216,7 +220,11 @@ class OpcodesControllerTest {
                                                                 RecordFile recordFile) throws Exception {
         setUp(transaction, ethTransaction, recordFile);
 
-        when(contractCallService.processOpcodeCall(any())).thenCallRealMethod();
+        reset(contractCallService);
+        when(contractCallService.processOpcodeCall(
+                callServiceParametersCaptor.capture(),
+                tracerOptionsCaptor.capture()
+        )).thenCallRealMethod();
 
         final TransactionIdOrHashParameter transactionIdOrHash = getTransactionIdOrHash(transaction, ethTransaction);
 
@@ -239,6 +247,7 @@ class OpcodesControllerTest {
                     .andExpect(status().isOk())
                     .andExpect(responseBody(Builder.opcodesResponse(opcodesResultCaptor.get())));
 
+            assertEquals(new OpcodeTracerOptions(), tracerOptionsCaptor.getValue());
             assertEquals(
                     callServiceParametersBuilder.buildFromTransaction(transactionIdOrHash),
                     callServiceParametersCaptor.getValue());
@@ -260,8 +269,11 @@ class OpcodesControllerTest {
         final var hexDataErrorMessage =
                 "0x08c379a000000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000015437573746f6d20726576657274206d6573736167650000000000000000000000";
 
-        when(contractCallService.processOpcodeCall(any())).thenThrow(
-                new MirrorEvmTransactionException(CONTRACT_REVERT_EXECUTED, detailedErrorMessage, hexDataErrorMessage));
+        reset(contractCallService);
+        when(contractCallService.processOpcodeCall(
+                callServiceParametersCaptor.capture(),
+                tracerOptionsCaptor.capture()
+        )).thenThrow(new MirrorEvmTransactionException(CONTRACT_REVERT_EXECUTED, detailedErrorMessage, hexDataErrorMessage));
 
         final TransactionIdOrHashParameter transactionIdOrHash = getTransactionIdOrHash(transaction, ethTransaction);
 
@@ -280,19 +292,20 @@ class OpcodesControllerTest {
 
         final TransactionIdOrHashParameter transactionIdOrHash = getTransactionIdOrHash(transaction, ethTransaction);
 
-        final var requestParams = new boolean[][] {
-                { false, true, true },
-                { true, false, true },
-                { true, true, false },
-                { false, false, false }
+        final var tracerOptions = new OpcodeTracerOptions[] {
+                new OpcodeTracerOptions(false, true, true),
+                new OpcodeTracerOptions(true, false, true),
+                new OpcodeTracerOptions(true, true, false),
+                new OpcodeTracerOptions(false, false, false)
         };
 
-        for (var params : requestParams) {
-            mockMvc.perform(opcodesRequest(transactionIdOrHash, params[0], params[1], params[2]))
+        for (var options : tracerOptions) {
+            mockMvc.perform(opcodesRequest(transactionIdOrHash, options))
                     .andExpect(status().isOk())
                     .andExpect(responseBody(
-                            Builder.opcodesResponse(opcodesResultCaptor.get(), params[0], params[1], params[2])));
+                            Builder.opcodesResponse(opcodesResultCaptor.get(), options)));
 
+            assertEquals(options, tracerOptionsCaptor.getValue());
             assertEquals(
                     callServiceParametersBuilder.buildFromTransaction(transactionIdOrHash),
                     callServiceParametersCaptor.getValue());
@@ -392,13 +405,11 @@ class OpcodesControllerTest {
     private static class Builder {
 
         private static OpcodesResponse opcodesResponse(OpcodesProcessingResult result) {
-            return opcodesResponse(result, true, false, false);
+            return opcodesResponse(result, new OpcodeTracerOptions());
         }
 
         private static OpcodesResponse opcodesResponse(OpcodesProcessingResult result,
-                                                       boolean stack,
-                                                       boolean memory,
-                                                       boolean storage) {
+                                                       OpcodeTracerOptions options) {
             return new OpcodesResponse()
                     .contractId(result.transactionProcessingResult().getRecipient()
                             .map(EntityIdUtils::contractIdFromEvmAddress)
@@ -419,17 +430,17 @@ class OpcodesControllerTest {
                                     .gas(opcode.gas())
                                     .gasCost(opcode.gasCost())
                                     .depth(opcode.depth())
-                                    .stack(stack ?
+                                    .stack(options.isStack() ?
                                             opcode.stack().stream()
                                                     .map(Bytes::toHexString)
                                                     .toList() :
                                             List.of())
-                                    .memory(memory ?
+                                    .memory(options.isMemory() ?
                                             opcode.memory().stream()
                                                     .map(Bytes::toHexString)
                                                     .toList() :
                                             List.of())
-                                    .storage(storage ?
+                                    .storage(options.isStorage() ?
                                             opcode.storage().entrySet().stream()
                                                     .collect(Collectors.toMap(
                                                             Map.Entry::getKey,
@@ -439,19 +450,20 @@ class OpcodesControllerTest {
                             .toList());
         }
 
-        private static OpcodesProcessingResult opcodesProcessingResult(final Address recipient,
-                                                                       final Bytes output) {
-            final List<Opcode> opcodes = opcodes();
+        private static OpcodesProcessingResult opcodesProcessingResult(final CallServiceParameters params,
+                                                                       final OpcodeTracerOptions options) {
+            final Address recipient = params != null ? params.getReceiver() : Address.ZERO;
+            final List<Opcode> opcodes = opcodes(options);
             final long gasUsed = opcodes.stream().map(Opcode::gas).reduce(Long::sum).orElse(0L);
             final long gasCost = opcodes.stream().map(Opcode::gasCost).reduce(Long::sum).orElse(0L);
             return OpcodesProcessingResult.builder()
                     .transactionProcessingResult(HederaEvmTransactionProcessingResult
-                            .successful(List.of(), gasUsed , 0, gasCost, output, recipient))
+                            .successful(List.of(), gasUsed , 0, gasCost, Bytes.EMPTY, recipient))
                     .opcodes(opcodes)
                     .build();
         }
 
-        private static List<Opcode> opcodes() {
+        private static List<Opcode> opcodes(final OpcodeTracerOptions options) {
             return Arrays.asList(
                     new Opcode(
                             1273,
@@ -459,14 +471,16 @@ class OpcodesControllerTest {
                             2731,
                             3,
                             2,
-                            Arrays.asList(
-                                    Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
-                                    Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")
-                            ),
-                            Arrays.asList(
-                                    Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
-                                    Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")
-                            ),
+                            options.isStack() ?
+                                    Arrays.asList(
+                                            Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
+                                            Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")
+                                    ) : List.of(),
+                            options.isMemory() ?
+                                    Arrays.asList(
+                                            Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
+                                            Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")
+                                    ) : List.of(),
                             Collections.emptyMap(),
                             null
                     ),
@@ -476,14 +490,16 @@ class OpcodesControllerTest {
                             2728,
                             0,
                             2,
-                            Arrays.asList(
-                                    Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
-                                    Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")
-                            ),
-                            Arrays.asList(
-                                    Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
-                                    Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")
-                            ),
+                            options.isStack() ?
+                                    Arrays.asList(
+                                        Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
+                                        Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")
+                                    ) : List.of(),
+                            options.isMemory() ?
+                                    Arrays.asList(
+                                        Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
+                                        Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")
+                                    ) : List.of(),
                             Collections.emptyMap(),
                             "0x4e487b710000000000000000000000000000000000000000000000000000000000000012"
                     ),
@@ -493,18 +509,21 @@ class OpcodesControllerTest {
                             2776,
                             3,
                             1,
-                            Arrays.asList(
-                                    Bytes.fromHexString("000000000000000000000000000000000000000000000000000000000135b7d0"),
-                                    Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a0")
-                            ),
-                            Arrays.asList(
-                                    Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000"),
-                                    Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000")
-                            ),
-                            Map.of(
-                                    "0000000000000000000000000000000000000000000000000000000000000000",
-                                    Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000014")
-                            ),
+                            options.isStack() ?
+                                    Arrays.asList(
+                                        Bytes.fromHexString("000000000000000000000000000000000000000000000000000000000135b7d0"),
+                                        Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a0")
+                                    ) : List.of(),
+                            options.isMemory() ?
+                                    Arrays.asList(
+                                        Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000"),
+                                        Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000")
+                                    ) : List.of(),
+                            options.isStorage() ?
+                                    Map.of(
+                                            "0000000000000000000000000000000000000000000000000000000000000000",
+                                            Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000014")
+                                    ) : Collections.emptyMap(),
                             null
                     )
             );
